@@ -1,3 +1,14 @@
+2000-07-24  Eric Melski  <ericm@ajubasolutions.com>
+
+	* tests/text.test: Added tests for -regexp -nocase searches with
+	backslash character classes.
+
+	* generic/tkText.c (TextSearchCmd): Text search did not work
+	properly when -regexp and -nocase were used, in combination with
+	backslash character classes represented by capital letters (ie,
+	\W, \M); altered implementation of -regexp -nocase searches to use
+	new regexp interfaces to fix this problem.  [Bug: 5988].
+
 2000-07-21  Eric Melski  <ericm@ajubasolutions.com>
 
 	* tests/text.test: Added tests for searching when text is elided.
